# nlp-hack

./: .env.example  .gitignore  README.md  SUBMISSION_README.md  pyproject.toml
configs/: data_sources.yaml
data/processed/: spm.model  spm.vocab
data/seeds/: ko_debate_motions.txt
docs/: LSTM_Baseline_README.md  dataset_examples.md  plan_gyehun.md  plan_gyehun_revised.md  training_combo_plan.md
docs/submission/: Team_6_demo_output.txt
scripts/: demo_inference.py  launch_vllm.sh  pull_dataset_from_hf.py  push_model_to_hf.py  push_to_hf.py  run_pipeline.sh
src/: data.py  generate.py  train.py
src/model/: embeddings.py  lstm_seq2seq.py
src/preprocess/: _utils.py  build_vocab.py  common.py  en_casual_conversation.py  en_ibm_argq.py  en_isotonic_conversation.py  en_mc_conversation.py  ko_aihub_dialogue_summary.py  ko_aihub_persona_dialog.py  ko_aihub_purpose_dialog.py  ko_aihub_seeded_synth.py  ko_aihub_topic_dialogue.py  ko_debate_synth.py  ko_k_news_stance.py  ko_klue_nli.py  ko_korean_petitions.py  merge_and_split.py
src/synth/: client.py  counterargument.py  prompts.py
