[project]
name = "nlp-hack"
version = "0.1.0"
description = "Debate-themed LSTM seq2seq chatbot — hackathon project"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.18",
    "tqdm>=4.66",
    "korpora>=0.2",
    "pyyaml>=6.0",
    "openai>=1.50",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
